--- a/assets/scss/partials/common/contact-form.scss
+++ b/assets/scss/partials/common/contact-form.scss
@@ -65,3 +65,10 @@
     overflow: visible;
   }
 }
+
+@media (max-width: 430px){
+  #linkedin-link{
+    width: 181px;
+    word-wrap: break-word;
+  }
+}
